Change parksmap image to Quay.io

--- a/workshop/content/parksmap-docker.adoc
+++ b/workshop/content/parksmap-docker.adoc
@@ -18,7 +18,7 @@ In the *Image Name* field, copy/paste the following into the box:
 
 [source,role=copy]
 ----
-docker.io/openshiftroadshow/{{PARKSMAP_IMAGENAME}}:{{PARKSMAP_VERSION}}
+quay.io/openshiftroadshow/{{PARKSMAP_IMAGENAME}}:{{PARKSMAP_VERSION}}
 ----
 
 Either press *enter* or click on the magnifying glass. OpenShift will then go
