--- a/workshop/content/parksmap-scaling.adoc
+++ b/workshop/content/parksmap-scaling.adoc
@@ -82,13 +82,13 @@ the `scale` command. You could also do this by incrementing the Desired Count in
 oc scale --replicas=2 dc/parksmap
 ----
 
-You can also scale up to two pods in the Developer Perspective. From the Topology view, first click the `parksmap` deployment config and select the *Overview* tab:
+You can also scale up to two pods in the Developer Perspective. From the Topology view, first click the `parksmap` deployment config and select the *Details* tab:
 
-image::images/parksmap-scaleup.png[Scaling]
+image::images/parksmap-details.png[Details]
 
 Next, click the *^* icon next to the Pod visualization to scale up to 2 pods.
 
-image::images/parksmap-scaled.png[Scaled Up]
+image::images/parksmap-scaleup.png[Scaling up]
 
 To verify that we changed the number of replicas, issue the following command:
 
@@ -171,7 +171,7 @@ many pods are behind a service.
 
 You can also see that both *Pods* are running in the Developer Perspective:
 
-image::images/parksmap-scaled.png[Scaling]
+image::images/parksmap-scaled.png[Scaled]
 
 Overall, that's how simple it is to scale an application (*Pods* in a
 *Service*). Application scaling can happen extremely quickly because OpenShift
