--- a/workshop/content/parksmap-logging.adoc
+++ b/workshop/content/parksmap-logging.adoc
@@ -92,11 +92,13 @@ insufficient.
 Fortunately, OpenShift provides an optional system for log aggregation that uses
 Elasticsearch, Fluentd, and Kibana (EFK).
 
-In the Administrator perspective, click *Monitoring -> Logging* from the left navigation. 
+To view aggregated logging from Kibana, click to *Show in Kibana* link from *Log* tab as shown:
+
+image::images/parksmap-logging-show-in-kibana.png[Show Logs in Kibana]
 
 Clicking this link takes you to the Kibana web interface. This interface is
 secured with OpenShift's role-based access controls, so you can only see logs
-for projects that you have access to. You will need to accept the SSL certificate. If you are prompted to authenticate, use the same credentials as with OpenShift.
+for projects that you have access to. If you are prompted to authenticate, use the same credentials as with OpenShift and when prompted the first time, authorize Access to kibana service account to access your account clicking on *Allow selected permission*.
 
 image::images/parksmap-logging-kibana.png[Kibana Interface]
 
